--- a/index.html
+++ b/index.html
@@ -490,35 +490,31 @@
         </div>
     </div>
    <script type="module">
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
-        import { getFirestore, collection, addDoc, getDocs, doc, setDoc, query, where } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore, collection, addDoc, getDocs, doc, setDoc, query, where } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // Firebase configuration - REPLACE WITH YOUR CONFIG
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+const firebaseConfig = {
+  apiKey: "AIzaSyAwOEeOVG29O8DJRzmEOKxmRXoR8R2b5cU",
+  authDomain: "omnixam---dl.firebaseapp.com",
+  projectId: "omnixam---dl",
+  storageBucket: "omnixam---dl.firebasestorage.app",
+  messagingSenderId: "218730322717",
+  appId: "1:218730322717:web:f7e90b2c1a232538435ff4"
+};
 
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const db = getFirestore(app);
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-        // Make functions globally available
-        window.auth = auth;
-        window.db = db;
-        window.addDoc = addDoc;
-        window.collection = collection;
-        window.getDocs = getDocs;
-        window.setDoc = setDoc;
-        window.doc = doc;
-        window.signOut = signOut;
-
+window.auth = auth;
+window.db = db;
+window.addDoc = addDoc;
+window.collection = collection;
+window.getDocs = getDocs;
+window.setDoc = setDoc;
+window.doc = doc;
+window.signOut = signOut;
         // Sample exam data
         const examsData = [
             // Tamil Nadu Exams
@@ -976,14 +972,7 @@
 
         // Initialize app
         loadExams();
-    </script>
-   <script type="module">
-
-import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-import { getAuth } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
-import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
-
-const firebaseConfig = {
+       const firebaseConfig = {
     apiKey: "AIzaSyAwOEeOVG29O8DJRzmEOKxmRXoR8R2b5cU",
     authDomain: "omnixam---dl.firebaseapp.com",
     projectId: "omnixam---dl",
@@ -992,13 +981,8 @@ const firebaseConfig = {
     appId: "1:218730322717:web:f7e90b2c1a232538435ff4",
     measurementId: "G-9X4XCBZKV6"
   };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-
-</script>
- 
+    </script>
+   
 
 </body>
 </html>
