--- a/index.html
+++ b/index.html
@@ -490,31 +490,27 @@
         </div>
     </div>
    <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs, doc, setDoc, query, where } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
 
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "AIzaSyAwOEeOVG29O8DJRzmEOKxmRXoR8R2b5cU",
-  authDomain: "omnixam---dl.firebaseapp.com",
-  projectId: "omnixam---dl",
-  storageBucket: "omnixam---dl.firebasestorage.app",
-  messagingSenderId: "218730322717",
-  appId: "1:218730322717:web:f7e90b2c1a232538435ff4"
+  apiKey: "AIzaSyDs2MwEhupAS1UZZWlImQEkgwkeUMViM4A",
+  authDomain: "omnixam.firebaseapp.com",
+  projectId: "omnixam",
+  storageBucket: "omnixam.firebasestorage.app",
+  messagingSenderId: "896524848073",
+  appId: "1:896524848073:web:15eff83b2c82974c473618",
+  measurementId: "G-FGX3HPFH2C"
 };
 
+// Initialize Firebase
 const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getFirestore(app);
-
-window.auth = auth;
-window.db = db;
-window.addDoc = addDoc;
-window.collection = collection;
-window.getDocs = getDocs;
-window.setDoc = setDoc;
-window.doc = doc;
-window.signOut = signOut;
+const analytics = getAnalytics(app);
         // Sample exam data
         const examsData = [
             // Tamil Nadu Exams
@@ -969,18 +965,6 @@ window.signOut = signOut;
                 document.getElementById('userSection').style.display = 'none';
             }
         });
-
-        // Initialize app
-        loadExams();
-       const firebaseConfig = {
-    apiKey: "AIzaSyAwOEeOVG29O8DJRzmEOKxmRXoR8R2b5cU",
-    authDomain: "omnixam---dl.firebaseapp.com",
-    projectId: "omnixam---dl",
-    storageBucket: "omnixam---dl.firebasestorage.app",
-    messagingSenderId: "218730322717",
-    appId: "1:218730322717:web:f7e90b2c1a232538435ff4",
-    measurementId: "G-9X4XCBZKV6"
-  };
     </script>
    
 
